relay-event-normalization/src/transactions/snapshots/relay_event_normalization__transactions__processor__tests__no_sanitized_if_no_rules.snap
---
source: relay-general/src/store/transactions/processor.rs
expression: event
---
{
  "type": "transaction",
  "transaction": "/remains/rule-target/whatever",
  "transaction_info": {
    "source": "sanitized"
  },
  "timestamp": 1619420400.0,
  "start_timestamp": 1619420341.0,
  "contexts": {
    "trace": {
      "trace_id": "4c79f60c11214eb38604f4ae0781bfb2",
      "span_id": "fa90fdead5f74053",
      "op": "default",
      "type": "trace"
    }
  },
  "spans": []
}
