relay-event-normalization/src/transactions/snapshots/relay_event_normalization__transactions__processor__tests__scrub_identifiers_with_span_description_rules_and_transaction_name_rules.snap
---
source: relay-general/src/store/transactions/processor.rs
expression: event
---
{
  "type": "transaction",
  "transaction": "/transaction-name/hi",
  "transaction_info": {
    "source": "sanitized"
  },
  "timestamp": 1619420400.0,
  "start_timestamp": 1619420341.0,
  "contexts": {
    "trace": {
      "trace_id": "4c79f60c11214eb38604f4ae0781bfb2",
      "span_id": "fa90fdead5f74053",
      "op": "default",
      "type": "trace"
    }
  },
  "spans": [
    {
      "timestamp": 1597976393.471877,
      "start_timestamp": 1597976393.461967,
      "description": "POST http://example.com/remains/to-scrub/remains-too/1234567890",
      "op": "http.client",
      "span_id": "bd2eb23da2beb450",
      "parent_span_id": "8f5a2b8768cafb4e",
      "trace_id": "ff62a8b040f340bda5d830223def1d81",
      "status": "ok",
      "data": {
        "description.scrubbed": "POST http://example.com/remains/*/remains-too/*",
        "span.category": "http",
        "span.description": "POST http://example.com/remains/*/remains-too/*",
        "span.domain": "example.com",
        "span.group": "70333dac975bc269",
        "span.op": "http.client",
        "span.status": "ok",
        "transaction": "/transaction-name/hi"
      }
    },
    {
      "timestamp": 1597976393.471877,
      "start_timestamp": 1597976393.461967,
      "description": "POST http://example.com/remains/to-scrub/remains-too/1234567890",
      "op": "http.client",
      "span_id": "bd2eb23da2beb450",
      "parent_span_id": "8f5a2b8768cafb4e",
      "trace_id": "ff62a8b040f340bda5d830223def1d81",
      "status": "ok",
      "data": {
        "description.scrubbed": "POST http://example.com/remains/*/remains-too/*",
        "span.category": "http",
        "span.description": "POST http://example.com/remains/*/remains-too/*",
        "span.domain": "example.com",
        "span.group": "70333dac975bc269",
        "span.op": "http.client",
        "span.status": "ok",
        "transaction": "/transaction-name/hi"
      }
    },
    {
      "timestamp": 1597976393.471877,
      "start_timestamp": 1597976393.461967,
      "description": "GET http://example.com/another/url/is/intact",
      "op": "http.client",
      "span_id": "bd2eb23da2beb451",
      "parent_span_id": "8f5a2b8768cafb4e",
      "trace_id": "ff62a8b040f340bda5d830223def1d81",
      "status": "ok",
      "data": {
        "span.category": "http",
        "span.description": "example.com/<unparameterized>",
        "span.domain": "example.com",
        "span.group": "d1ebe411f493f83e",
        "span.op": "http.client",
        "span.status": "ok",
        "transaction": "/transaction-name/hi"
      }
    },
    {
      "timestamp": 1597976393.471877,
      "start_timestamp": 1597976393.461967,
      "description": "GET http://example.com/applies-from-transaction-name-rules/to-scrub/untouched/1234567890",
      "op": "http.client",
      "span_id": "bd2eb23da2beb451",
      "parent_span_id": "8f5a2b8768cafb4e",
      "trace_id": "ff62a8b040f340bda5d830223def1d81",
      "status": "ok",
      "data": {
        "description.scrubbed": "GET http://example.com/applies-from-transaction-name-rules/*/untouched/*",
        "span.category": "http",
        "span.description": "GET http://example.com/applies-from-transaction-name-rules/*/untouched/*",
        "span.domain": "example.com",
        "span.group": "2dbe1ecc9c2cc400",
        "span.op": "http.client",
        "span.status": "ok",
        "transaction": "/transaction-name/hi"
      }
    },
    {
      "timestamp": 1597976393.471877,
      "start_timestamp": 1597976393.461967,
      "description": "POST http://example.com/remains/not-scrubbed-for-different-op/remains-too",
      "op": "db.sql.query",
      "span_id": "bd2eb23da2beb452",
      "parent_span_id": "8f5a2b8768cafb4e",
      "trace_id": "ff62a8b040f340bda5d830223def1d81",
      "status": "ok",
      "data": {
        "span.category": "db",
        "span.op": "db.sql.query",
        "span.status": "ok",
        "transaction": "/transaction-name/hi"
      }
    }
  ],
  "_meta": {
    "spans": {
      "0": {
        "data": {
          "description.scrubbed": {
            "": {
              "rem": [
                [
                  "description.scrubbed:**/remains/*/**",
                  "s"
                ]
              ]
            }
          }
        }
      },
      "1": {
        "data": {
          "description.scrubbed": {
            "": {
              "rem": [
                [
                  "description.scrubbed:**/remains/*/**",
                  "s"
                ]
              ]
            }
          }
        }
      },
      "3": {
        "data": {
          "description.scrubbed": {
            "": {
              "rem": [
                [
                  "description.scrubbed:**/applies-from-transaction-name-rules/*/untouched/**",
                  "s"
                ]
              ]
            }
          }
        }
      }
    }
  }
}
